<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPS Share</string>
    <string name="title_activity_maps">GPS Share</string>
    <string name="action_settings">Settings</string>
    <string name="pref_message">Message Content</string>
    <string name="pref_include_gps_coordinates">GPS Coordinates</string>
    <string name="pref_include_gps_coordinates_summary">Include degrees, minutes, seconds in message</string>
    <string name="pref_include_street_address">Street Address</string>
    <string name="pref_include_street_address_summary">Include street address estimate in message</string>
    <string name="pref_include_maps_link">Maps Link</string>
    <string name="pref_include_maps_link_summary">Include Google Maps link to location in message</string>
    <string name="pref_include_app_link">Include GPS Share Download Link</string>
    <string name="settings_title">GPS Share 2.1 Settings</string>
    <string name="pref_meta">About GPS Share</string>
    <string name="prefs_web_page">Website</string>
    <string name="pref_include_text">Include text with message</string>
    <string name="pref_include_text_summary">Show specified text when sending location</string>
    <string name="pref_message_text_summary">Include this text before each message</string>
    <string name="pref_message_text_default">Here is my location</string>
    <string name="pref_message_text">Message Text</string>
    <string name="app_link">--\nSent using GPS Share: http://goo.gl/VOcnaD</string>
    <string name="derp">Derp derp derp!</string>
    <string name="menu_map">Map Type</string>
    <string name="menu_hybrid">Hybrid</string>
    <string name="menu_street">Street Map</string>
    <string name="menu_terrain">Terrain</string>
    <string name="menu_satellite">Satellite</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="license_agreement">Credits &amp; License Agreement</string>
    <string name="how_to">How to use GPS Share</string>
    <string name="title_activity_license">License Agrement</string>
    <string name="eula">&lt;h2&gt;GPS SHARE&lt;/h2&gt;
&lt;h3&gt;Credits&lt;/h3&gt;
&lt;p&gt;Cross-hair icon based on icon by Freepik from &lt;a href=&quot;http://www.flaticon.com&quot; title=&quot;Flaticon&quot;&gt;www.flaticon.com&lt;/a&gt;
and is licensed by &lt;a href=&quot;http://creativecommons.org/licenses/by/3.0/&quot; title=&quot;Creative Commons BY 3.0&quot;&gt;CC BY 3.0&lt;/a&gt;&lt;/p&gt;

&lt;p&gt;Other application icons are copied from or based on the Android Open Source Project and
are governed by its Apache 2.0 license, as seen at &lt;a href=&quot;http://developer.android.com/license.html&quot; title=&quot;Apache 2.0 license AOSP&quot;&gt;http://developer.android.com/license.html&lt;/a&gt;.&lt;p&gt;

&lt;p&gt;Google Play and Android are trademarks of Google Inc.&lt;p&gt;

&lt;h3&gt;GPS Share License&lt;/h3&gt;

&lt;p&gt;
The MIT License (MIT)
&lt;/p&gt;&lt;p&gt;
Copyright (c) 2010-2014 Ken Kinder
&lt;/p&gt;&lt;p&gt;
Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the &quot;Software&quot;), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:
&lt;/p&gt;&lt;p&gt;
The above copyright notice and this permission notice shall be included in
all copies or substantial portions of the Software.
&lt;/p&gt;&lt;p&gt;
THE SOFTWARE IS PROVIDED &quot;AS IS&quot;, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
THE SOFTWARE.&lt;/p&gt;</string>

</resources>
